k8s/booking-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: temple
  labels:
    app: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - name: http
      port: 8000
      targetPort: http
